--- a/index.html
+++ b/index.html
@@ -3,34 +3,31 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PWA PIAC TEST</title>
+    <title>Cat Memes App</title>
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="apple-touch-icon" href="images/pwa-icon-152.png">
+    <link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
+    <link rel="shortcut icon" href="/images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="PWA PIAC">
+    <meta name="apple-mobile-web-app-title" content="Cat Memes App">
     <meta name="theme-color" content="#db4938">
-
-    <link rel="apple-touch-startup-image" href="images/splash-640x1136.png" media="(device-width: 320px) and (device-height: 568px)">
-    <link rel="apple-touch-startup-image" href="images/splash-750x1334.png" media="(device-width: 375px) and (device-height: 667px)">
-    <link rel="apple-touch-startup-image" href="images/splash-828x1792.png" media="(device-width: 414px) and (device-height: 896px)">
-    <link rel="apple-touch-startup-image" href="images/splash-1125x2436.png" media="(device-width: 375px) and (device-height: 812px)">
-    <link rel="apple-touch-startup-image" href="images/splash-1242x2688.png" media="(device-width: 414px) and (device-height: 896px)">
-    <link rel="apple-touch-startup-image" href="images/splash-1536x2048.png" media="(min-device-width: 768px) and (max-device-width: 1024px)">
-    <link rel="apple-touch-startup-image" href="images/splash-1668x2224.png" media="(min-device-width: 834px) and (max-device-width: 1112px)">
-    <link rel="apple-touch-startup-image" href="images/splash-1668x2388.png" media="(min-device-width: 834px) and (max-device-width: 1194px)">
-    <link rel="apple-touch-startup-image" href="images/splash-2048x2732.png" media="(min-device-width: 1024px) and (max-device-width: 1366px)">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#" id="home-link">Home</a></li>
+                <li><a href="#" id="about-link">About</a></li>
+                <li><a href="#" id="add-meme-link">Add Meme</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="container">
-        <main>
-            <h1 class="title">Hello World!</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
+        <main id="main-content">
+            <!-- Content will be dynamically loaded here -->
         </main>
     </div>
     <script src="js/main.js"></script>
